Bug 173946 - posters name not displayed in from field
Summary: posters name not displayed in from field
Status: RESOLVED FIXED
Alias: None
Product: knode
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 187962 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-10-31 05:15 UTC by shane@weasel.is-a-geek.net
Modified: 2009-04-06 19:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description shane@weasel.is-a-geek.net 2008-10-31 05:15:38 UTC
Version:           0.99.01  (using KDE 4.1.2)
OS:                Linux
Installed from:    Ubuntu Packages

It appears that when the From: field has an entry that does not match .* <.*@.*> then the name of that poster is not displayed.
For example
  From:   lrolloatparadisedotnetdotnz
will display   
Or
  From:   Rich80105
will display
Comment 1 Craig Counts 2008-11-04 04:21:50 UTC
I can confirm this bug ...
on Gentoo Linux installed fromportage.

same kde/knode versions 

note:
The knode from kde 3.5.x works "correctly."
Comment 2 Olivier Trichet 2009-04-05 19:58:37 UTC
*** Bug 187962 has been marked as a duplicate of this bug. ***
Comment 3 Olivier Trichet 2009-04-06 19:41:34 UTC
SVN commit 950265 by otrichet:

"From" was empty when the sender's address was invalid

BUG: 173946

 M  +7 -0      kngroup.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=950265