"From" was empty when the sender's address was invalid

BUG: 173946

svn path=/trunk/KDE/kdepim/knode/; revision=950265